--- a/style.css
+++ b/style.css
@@ -9,11 +9,12 @@ body {
     width: 60em;
     font-family: 'Sen', sans-serif;
     font-weight: 600;
-    letter-spacing: 1.2px;
+    letter-spacing: 1.1px;
 }
 
 p {
     font-size: 18px;
+    line-height: 1.6;
 }
 
 .this{
@@ -47,6 +48,11 @@ i{
     background-color: pink;
 }
 
+img {
+    height: 400px;
+    width: 800px;
+}
+
 .centre {
     text-align: center;
 }
@@ -58,5 +64,4 @@ i{
 
 ul {
     line-height: 1.6;
-
 }
