--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     width: 60em;
     font-family: 'Sen', sans-serif;
     font-weight: 600;
-    letter-spacing: 1.1px;
+    letter-spacing: 1.1;
 }
 
 p {
